bug fix[App.css]: can over-scroll horizontally on mobile

--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -170,10 +170,6 @@ body.dark-mode .right-pane {
   .resizer {
     display: none;
   }
-
-  .right-pane {
-    width: 100%; /* Make right pane occupy full width */
-  }
 }
 
 /* Scrolling */
